name:                orbit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dlozeve/orbit#readme
license:             BSD3
license-file:        LICENSE
author:              Dimitri Lozeve
maintainer:          dimitri@lozeve.com
copyright:           2017 Dimitri Lozeve
category:            Science
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , lens
                     , parallel
                     , deepseq
  default-language:    Haskell2010

executable orbit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orbit
                     , linear
                     , random
                     , gloss
  default-language:    Haskell2010

test-suite orbit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , orbit
                     , linear
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlozeve/orbit
